--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/A%20(1).png" type="image/png" />
+  <link rel="icon" href="A%20(1).png" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0f172a" />
   <meta name="description"
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </noscript>
 
-  <link rel="apple-touch-icon" href="/A%20(1).png" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="A%20(1).png" />
+  <link rel="manifest" href="manifest.json" />
 
   <title>Ashraf Ahmed | Front-End Developer</title>
 </head>
